sample/retrieveUnpackaged/objects/Portal_Bill_History__c.object
<CustomObject>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <label>Bill_Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Amount__c</fullName>
        <label>Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brought_Forward__c</fullName>
        <label>Brought Forward</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Portal Bill History</label>
    <nameField>
        <label>Bill History Portal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Bill History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>